# HelloWorld_cpp

./: .gitignore  CMakeLists.txt
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
include/: Hello.h
src/: Hello.cpp  main.cpp
